# salo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  requirements.in  requirements.txt  setup.cfg
docs/: events.html  faq.html  framework.html  genindex.html  gettingstarted.html  index.html  objects.inv  outputs.html  py-modindex.html  recipes.html  search.html  searchindex.js  stencils.html
docs/_modules/: index.html
docs/_modules/salo/: cadence.html  cli.html  events.html  outputs.html  salo.html  stencils.html
docs/_modules/salo/outputs/: console.html  localfile.html  splunkhec.html
docs/_sources/: events.rst.txt  faq.rst.txt  gettingstarted.rst.txt  recipes.rst.txt
docs/_sources/autoapi/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/salo/: index.html
docs/src/: conf.py  faq.rst  framework.rst  gettingstarted.rst  index.rst  outputs.rst  requirements.txt  stencils.rst
examples/: output.yaml
examples/recipes/: beacon.yaml  cobalt-dns.yaml  eventcode3.yaml  random-panthreat.yaml  random-pantraffic.yaml  sunburst-dns.yaml
salo/: __init__.py  __main__.py  cadence.py  cli.py  salo.py
salo/events/: __init__.py
salo/events/pan/: __init__.py  threat.py  traffic.py
salo/events/suricata/: __init__.py  base.py  dns.py  http.py
salo/events/sysmon/: __init__.py
salo/events/zeek/: __init__.py  base.py  conn.py  dns.py  files.py  http.py  rdp.py  smtp.py  ssl.py
salo/outputs/: __init__.py  console.py  localfile.py  splunkhec.py
salo/stencils/: __init__.py  sunburst.py
salo/stencils/cobaltstrike/: __init__.py  dns.py
(+116 files in other folders)
