[metadata]
name = salo
url = https://github.com/splunk/salo
license = Apache License 2.0
author = Marcus LaFerrera
author_email = mlaferrera@splunk.com
description = A Framework for synthentic log generation
long_description = file: README.md

[options]
python_requires = >= 3.8
setup_requires = setuptools_scm
packages = find:
install_requires = 
    pydantic ~= 1.8.2
    faker ~= 8.11.0
    PyYAML ~= 5.4.1
    jinja2 >= 3.0.1,< 3.2.0
    croniter ~= 1.0.15
    aiohec @ https://github.com/splunk/aiohec/archive/refs/tags/v0.3.0.zip

[options.entry_points]
console_scripts =
    salo = salo.cli:main

[flake8]
max-line-length = 100
extend-ignore = E203  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

